# chubot

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  push.sh  pyproject.toml  wolfram_server.py
chubot/: README.md
config/: models.example.json
data/: affinity.json
plugins/: chat_handler.py  common.py  model_manager.py  reply.py  tool_handler.py
